fixed Routing and layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,8 @@
 .Container {
   position: relative;
   display: flex;
+
+  width: 400px;
   width: max-content;
   overflow: hidden;
   flex-direction: column;
@@ -70,7 +72,7 @@
   position: absolute;
   height: 20px;
   width: 20px;
-background-color: brown;
+
   z-index: 3;
   -webkit-app-region: drag;
 }
